--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 ---
 layout: default
 ---
+<section id="intro">
+    <div class="flex-row-between">
+        <h1>Hi, This is Sri! 👋</h1>
+        <button id="theme-toggle" onclick="modeSwitcher()">
+            <div></div>
+        </button>
+    </div>
+    <p>About me:
+    </p>
+</section>
 
 <section class="posts">
 <ul>
